test/invalid-semantics/57163_not_enough_arguments/not_enough_arguments.mag
-- Author: 57163, Guilherme Dias

fun cicle (n, m, p, q) : (Int, Int, Int, Int) -> Unit =
	while n > 0 do (
		n = n - m;
		print(n * m * p * q)
	)

fun main (_) : Unit -> Unit =
    cicle(10,1,7)
